# dm19

./: README.md  dm19.opam  dune-project
dm/lib/: Jup.mli  SetExercises.ipynb  SetExercises.ml  SetModule.ipynb  Startup.html  Startup.ipynb  Startup.ml  Truthtable.ipynb  Truthtable.ml  dune  htm.ml  htm.mli  htm2.ml  jup.ml  truth.ml  truth.mli  tyxmpl
dm/lib/.ipynb_checkpoints/: SetExercises-checkpoint.ipynb  SetModule-checkpoint.ipynb  Startup-checkpoint.ipynb
dm/test/: Test.ipynb  a.ml  dune  ports.gv
dm/test/.ipynb_checkpoints/: Test-checkpoint.ipynb  Truthtable-checkpoint.ipynb  Untitled-checkpoint.ipynb
