; name = name of the supermodule that will wrap all source files as submodules
; public_name = name of the library for ocamlfind and opam
(library
 (name dm19)
 (public_name dm19)
 (libraries unix tyxml)
 (synopsis "Detta är en bibliotek med hjälpfiler till jupyter notebook för delkursen Diskret matematik"))